# onetab_extractor

./: .env.example  .gitignore  .output.txt  2026_02_18_UnifiedBrowserData.csv  Gemini_attempts_to_fix_summary.md  LICENSE  README.md  metadata_test.csv  metadata_test_v2.csv  onetab_extractor.py  pyproject.toml
human_readable_documentation/: Are_the_open_tab_extractor_functions,_an.md  Chrome_also_has_grouped_open_tabs,_that.md  Historical_changes.md  So_the_current_tabs_will_only_be_capture.md  moved_directory_confustion.md
tests/: test_extractors.py
