[project]
name = "onetab-extractor"
version = "0.1.0"
description = "Extracts OneTab links from Chrome LevelDB"
authors = [{ name = "Curtis O'Neal" }]
dependencies = [
    "hatchling>=1.28.0",
    "plyvel-ci>=1.5.0",
    "rich>=13.0.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Explicitly targeting your Intel-based Homebrew locations (/usr/local)
# while keeping /opt/homebrew for portability.
config-settings = { "build_ext" = "--include-dirs=/usr/local/include:/opt/homebrew/include --library-dirs=/usr/local/lib:/opt/homebrew/lib" }

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "pytest>=8.0.0",
]
